Bug 164775 - FILESAVE: ODP with connectors fails to open in PP when saved to PPTX
Summary: FILESAVE: ODP with connectors fails to open in PP when saved to PPTX
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:25.8.0 target:25.2.2 target:24...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: OOXML-Shapes PPTX-Corrupted
  Show dependency treegraph
 
Reported: 2025-01-20 17:11 UTC by Aron Budea
Modified: 2025-02-14 14:43 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample ODP (15.56 KB, application/vnd.oasis.opendocument.presentation)
2025-02-09 11:59 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2025-01-20 17:11:32 UTC
Open either of the following files, save it as PPTX, and try opening in PowerPoint:
- attachment 131552 [details] from bug 106254
- attachment 122431 [details] from bug 97632
- attachment 96013 [details] from bug 76326
- attachment 88509 [details] from bug 71139
(and a couple of dozens of other bugzilla/forum samples)

=> PowerPoint encounters a problem, and tries to repair the file.

Open XML SDK claims EndConnection node type's idx attribute has invalid value (-1).

Observed in 25.8.0.0.alpha0+ (72df5a6fdf3e14d9994ebd1de269ab712136a27a) / Windows.

This is a regression from the following commit, bibisected using repo bibisect-win64-7.5:
https://cgit.freedesktop.org/libreoffice/core/commit/?id=4d153517183193f468dee9148c94fe9d874bacb3
author		Tibor Nagy <nagy.tibor2@nisz.hu>	2022-06-27 09:45:04 +0200
committer	László Németh <nemeth@numbertext.org>	2022-07-22 13:40:25 +0200

tdf#149697 PPTX export: fix changing place of connection points
Comment 1 Aron Budea 2025-02-09 11:59:13 UTC
Created attachment 199087 [details]
Sample ODP

This is a slightly modified version of attachment 198537 [details] from bug 164708 (which itself was originating from attachment 67683 [details] in bug 30583) that as far as I can see, exhibits the same issue. The original was a grouped shape with interactions, in this sample the shape isn't grouped anymore, and the interactions have been removed.
Comment 2 Commit Notification 2025-02-09 16:28:05 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/589e523dd967e39f4715cfe120e12fba11cf9c90

tdf#164775 PPTX export: fix connector shape regression

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-02-10 11:43:58 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/eb50d50eaee85b36026d3c1bf8fdd468a1c185b3

tdf#164775 PPTX export: fix connector shape regression

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-02-10 15:53:46 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/18a5c7dd18937f315665dc55455965f0272d8f0c

tdf#164775 PPTX export: fix connector shape regression

It will be available in 24.8.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Aron Budea 2025-02-14 04:05:58 UTC
Tibor, thank you for fixing this bug! I can confirm that out of 44 test files from bugtrackers/forums this bug affected, 43 are now fixed. I've opened a separate bug report, bug 165248 on the remaining one file.

Please feel free to close this bug report, if you agree this can be considered done.