oox/source/export/shapes.cxx
@@ -1893,16 +1893,6 @@ ShapeExport& ShapeExport::WriteConnectorShape( const Reference< XShape >& xShape
     if (GetProperty(rXPropSet, u"EdgeEndConnection"_ustr))
         mAny >>= rXShapeB;
 
-    if (GetProperty(rXPropSet, u"StartGluePointIndex"_ustr))
-        mAny >>= nStartGlueId;
-    if (nStartGlueId != -1)
-        nStartGlueId = lcl_GetGluePointId(rXShapeA, nStartGlueId);
-
-    if (GetProperty(rXPropSet, u"EndGluePointIndex"_ustr))
-        mAny >>= nEndGlueId;
-    if (nEndGlueId != -1)
-        nEndGlueId = lcl_GetGluePointId(rXShapeB, nEndGlueId);
-
     // Position is relative to group in Word, but relative to anchor of group in API.
     if (GetDocumentType() == DOCUMENT_DOCX && !mbUserShapes && m_xParent.is())
     {
@@ -1913,6 +1903,24 @@ ShapeExport& ShapeExport::WriteConnectorShape( const Reference< XShape >& xShape
         aEndPoint.Y -= aParentPos.Y;
     }
     EscherConnectorListEntry aConnectorEntry( xShape, aStartPoint, rXShapeA, aEndPoint, rXShapeB );
+
+    if (GetProperty(rXPropSet, u"StartGluePointIndex"_ustr))
+    {
+        mAny >>= nStartGlueId;
+        nStartGlueId = (nStartGlueId != -1) ? lcl_GetGluePointId(rXShapeA, nStartGlueId)
+                                            : (aConnectorEntry.mXConnectToA.is()
+                                                   ? aConnectorEntry.GetConnectorRule(true)
+                                                   : -1);
+    }
+
+    if (GetProperty(rXPropSet, u"EndGluePointIndex"_ustr))
+    {
+        mAny >>= nEndGlueId;
+        nEndGlueId = (nEndGlueId != -1) ? lcl_GetGluePointId(rXShapeB, nEndGlueId)
+                                        : (aConnectorEntry.mXConnectToB.is()
+                                               ? aConnectorEntry.GetConnectorRule(false)
+                                               : -1);
+    }
 
     if (eConnectorType != ConnectorType_LINE)
     {
